# haskell-course

algebric-data-types/: ColourRGB.hs  ColourRGBRecords.hs
first-hprogram/: README.md
first-hprogram/app/: program1.hs  program2.hs  program4.hs
type-classes/: TypeClasses.hs
types-signatures/: README.md
types-signatures/src/: chars.hs  functions.hs  lists.hs  strings.hs  tuples.hs
udemy-course/: README.md
udemy-course/algebric-data-types/: ColourSimpleSumType.hs
udemy-course/first-hprogram/: ChangeLog.md  first-hprogram.cabal  package.yaml
udemy-course/first-hprogram/app/: numbers.txt  program.hs  program3.hs
udemy-course/hello-world/.stack-work/: stack.sqlite3
udemy-course/pattern-matching-basic/: Colour.hs  Colour2.hs  Colour3.hs  Colour4.hs  Colour5.hs  Func.hs
udemy-course/type-classes/: Quaternion.hs  ShowExample.hs  TypeWrapping.hs
udemy-course/types-signatures/: types-signatures.cabal
udemy-course/types-signatures/.stack-work/: stack.sqlite3
udemy-course/types-signatures/.stack-work/ghci/dc60e833/: cabal_macros.h
udemy-course/types-signatures/src/: nums.hs  polymorphism.hs
youtube-course/: README.md
youtube-course/algebric-data-types/: README.md  algebric-data-types.cabal
youtube-course/algebric-data-types/.stack-work/: stack.sqlite3
youtube-course/conditional-guards-pm/: Conditionals-guards-pm.hs  ListComprehension.hs  Lists.hs  Recursion.hs
youtube-course/high-order-functions/: Soma.hs
youtube-course/meuprojeto/: meuprojeto.cabal
youtube-course/type-alias/: README.md  type-alias.cabal
(+12 files in other folders)
